--- a/video.html
+++ b/video.html
@@ -5,34 +5,131 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="grid-overlay.css">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Hópverkefni 1</title>
-
-
     </head>
-    <body>
+      <body>
         <header>
-
-        </header>
-        <main>
-            <section class="hero">
-                <div class="hero__grid">
-                    <div class="hero__content">
-                    </div>
-
-
-                    <div class="hero__buttons">
-                        <button class="button button--dark">See more</button>
-                    </div>
+          <div class="content">
+            <div class="grid">
+              <div class="row">
+                <div class="">Recipes Videos About us</div>
+                  <h1 class="">yum&yum</h1>
+                  <div class="">
+                  </div>
                 </div>
+              </div>
             </div>
-        </section>
-    </main>
+          </header>
 
-    <footer>
-        footer
-    </footer>
+          <main>
+            <section class="video-cover">
+              <div class="video-grid">
+                <div class="video-row">
+                  <h2 class="">Pumpkin pie</h2>
+                  <div class="">Easy recipe 6 people 1 hour</div>
+                  <p>Pumpkin pie is a sweet dessert pie with a spiced, pumpkin-based custard filling. The pumpkin is a symbol of harvest time, and pumpkin pie is often eaten during the fall and early winter.</p>
+                </div>
+              </div>
+            </section>
+          </main>
 
-</body>
+
+            <section class="video-recipe">
+              <div class="ingredients-grid">
+                <div class="ingredients-row">
+                  <h3 class="video-h3">Ingredients</h3>
+                  <div class="video-dough">For the dough</div>
+                  <ul>
+                    <li>1 tbs of water</li>
+                    <li>2 cups of flour</li>
+                    <li>2 eggs</li>
+                    <li>1 cup of sugar</li>
+                  </ul>
+                  <h3 class="">For the filling</h3>
+                  <ul>
+                    <li>1 tbs of water</li>
+                    <li>2 cups of flour</li>
+                    <li>2 eggs</li>
+                    <li>1 cup of sugar</li>
+                  </ul>
+                  <h3 class="video-h3">The method</h3>
+                  <p>
+                    Wrap the crackers in a tea towel and smash up until fine, breaking up any big bits with your hands, and put them into a large bowl.
+                    Finely chop the parsley, including the stalks. Add the parsley, mustard, if using, and minced beef to the bowl. Crack in the egg and add a good pinch of salt and pepper.
+                    With clean hands, scrunch and mix everything up well. Divide into 6 and pat and mould each piece into a roundish shape about 2cm thick. Drizzle the burgers with oil, put on a plate, cover and place in the fridge until needed (this helps them to firm up).
+
+                    Preheat a large griddle or frying pan for about 4 minutes on a high heat. Turn the heat down to medium.
+                    Place the burgers on the griddle or in the pan and use a spatula to lightly press down on them, making sure the burger is in full contact. Cook them to your liking for 3 or 4 minutes on each side – you may need to cook them in two batches.
+
+                    Wash and dry a few small lettuce leaves, tearing up the larger ones. Slice the tomatoes. Peel and finely slice the red onion. Slice the gherkins lengthways as finely as you can. Place all this on a platter and put in the middle of the table with plates, cutlery, ketchup and drinks.
+                    Remove your burgers to another plate and carefully wipe your pan or griddle clean with kitchen paper.
+                    Halve your burger buns and lightly toast them on the griddle or in the pan. Also great with a chopped salad.
+                  </p>
+                </div>
+              </div>
+            </section>
+
+            <section class="video-checkout">
+              <div class="checkout-grid">
+                <div class="checkout-row">
+                  <div class="">Want some moving stuff</div>
+                  <h4 class="video-h5">Check out our video recipes</h4>
+                  <div class="video-img"><img src="" alt=""></div>
+                  <div class="checkout-header">September</div>
+                  <h5 class="video-h4">Lax sushi rolls</h5>
+                  <div class="checkout-buttons">
+                    <button class="checkout-button-gold">Read more</button>
+                </div>
+                </div>
+              </div>
+              <div class="checkout-grid">
+                <div class="checkout-row">
+                  <div class="video-img"><img src="" alt=""></div>
+                  <div class="checkout-header">August</div>
+                  <h5 class="video-h5">Blossoming cookie</h5>
+                  <div class="checkout-buttons">
+                    <button class="checkout-button-gold">Read more</button>
+                </div>
+                </div>
+              </div>
+              <div class="checkout-grid">
+                <div class="checkout-row">
+                  <div class="video-img"><img src="" alt=""></div>
+                  <div class="checkout-header">August</div>
+                  <h5 class="video-h5">Questches pie</h5>
+                  <div class="checkout-buttons">
+                    <button class="checkout-button-gold">Read more</button>
+                </div>
+                </div>
+              </div>
+              <div class="checkout-buttons">
+                <button class="checkout-button-gold">See more</button>
+            </section>
+
+            <section class="craving-grid">
+              <div class="craving-grid">
+                <div class="cravin-more">Craving more?</div>
+                <h6 class="video-h6">Subscribe to our newsletter</h6>
+                <div class="craving-email">Email
+                  <input type="email">
+                </div>
+                </div>
+              </div>
+            </section>
+            <section class="videp-socials">
+              <div class="socials-grid">
+                <div class="social-header">Come and join us for more recipes</div>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-youtube"></a>
+              </div>
+            </section>
+          </main>
+        </body>
+      </html>
 
 
-</html>
+
+
+
