footer kominn inn ókláraður samt

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="buttonbelowrecipes">
+            <div class="hero__buttons">
                 <button class="buttonbutton--dark">See more</button>
             </div>
 
@@ -231,15 +231,29 @@
                 </div>
             </div>
 
-            <div class="buttonbelowrecipes">
+            <div class="hero__buttons">
                 <button class="buttonbutton--dark">See more</button>
             </div>
+
+            
 
         </main>
 
 
         <footer>
-            footer
+            <div class="footerdiv">
+                <div class="hero__kicker">craving more</div>
+                <div class="newsletter">Subscribe to our newsletter</div>
+                <div class="emails">
+                    <div class="email">Email</div>
+                    <div class="enteremail">Enter your mail here</div>
+                    <div class="line"></div>
+                    <div class="email">Email</div>
+                    <div class="email">email@example.com</div>
+                    <div class="line"></div>
+                </div>
+                <button class="buttonbutton--dark">See more</button>
+            </div>
         </footer>
     
     </body>
