--- a/video.html
+++ b/video.html
@@ -1,131 +1,139 @@
 <!DOCTYPE html>
-<html lang="is">
+<html lang="en">
     <head>
         <meta charset="utf_8">
-        <link rel="stylesheet" href="grid_overlay.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font_awesome/4.7.0/css/font_awesome.min.css">
+        <title>Hópverkefni 1-Video recipe</title>
         <link rel="stylesheet" href="vid.css">
         <link rel="stylesheet" href="recipe.css">
-        <title>Hópverkefni 1</title>
+        <link rel="stylesheet" href="checkout.css">
+        <link rel="stylesheet" href="sub.css">
+        <link rel="stylesheet" href="grid-overlay.css">
+</head>
+<body>
+  <header>
+    <h1 class="logo">yum&yum</h1>
+    <p class="headertext">Recipes Videos About us</p>
+  </header>
+  <main>
+    <section class="vid">
+      <div class="vid__grid">
+        <div class="vid__content">
+          <h2 class="vid__title">Pumpkin pie</h2>
+          <div class="vid__easy">Easy recipe 6 people 1 hour</div>
+          <div class="vid__intro">Pumpkin pie is a sweet dessert pie with a spiced, pumpkin-based custard filling. The pumpkin is a symbol of harvest time, and pumpkin pie is often eaten during the fall and early winter.</div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-      </head>
-      <body>
-          <header>
-              <h1 class="logo">yum&yum</h1>
-              <p class="headertext">Recipes Videos About us</p>
-          </header>
-          <main>
+  <section class="recipe">
+    <div class="recipe__grid">
+      <div class="recipe__content">
+        <h3 class="recipe__title">Ingredients</h3>
+        <div class="recipe__dough">For the dough</div>
+        <div class="recipe__dough__list">
+          <p>1  tbs of water</p>
+          <p>2  cups of flour</p>
+          <p>2  eggs</p>
+          <p>1  cup of sugar</p>
+        </div>
+        <div class="recipe__filling">For the filling</div>
+        <div class="recipe__filling__list">
+          <p>1  tbs of water</p>
+          <p>2  cups of flour</p>
+          <p>2  eggs</p>
+          <p>1  cup of sugar</p>
+        </div>
+        <h3 class="recipe__method">The method</h3>
+        <div class="recipe__method__text">
+          <p>Wrap the crackers in a tea towel and smash up until fine, breaking up any big bits with your hands, and put them into a large bowl.
+            Finely chop the parsley, including the stalks. Add the parsley, mustard, if using, and minced beef to the bowl. Crack in the egg and add a good pinch of salt and pepper.
+            With clean hands, scrunch and mix everything up well. Divide into 6 and pat and mould each piece into a roundish shape about 2cm thick. Drizzle the burgers with oil, put on a plate, cover and place in the fridge until needed (this helps them to firm up).
 
-            <section class="vid">
-              <div class="vid__grid">
-                <div class="vid__content">
-                  <h2 class="vid__title">Pumpkin pie</h2>
-                  <div class="vid__easy">Easy recipe 6 people 1 hour</div>
+            Preheat a large griddle or frying pan for about 4 minutes on a high heat. Turn the heat down to medium.
+            Place the burgers on the griddle or in the pan and use a spatula to lightly press down on them, making sure the burger is in full contact. Cook them to your liking for 3 or 4 minutes on each side – you may need to cook them in two batches.
 
-                  <div class="vid__intro">Pumpkin pie is a sweet dessert pie with a spiced, pumpkin-based custard filling. The pumpkin is a symbol of harvest time, and pumpkin pie is often eaten during the fall and early winter.</div>
-                  <button class='button__play'></button>
-                </div>
+            Wash and dry a few small lettuce leaves, tearing up the larger ones. Slice the tomatoes. Peel and finely slice the red onion. Slice the gherkins lengthways as finely as you can. Place all this on a platter and put in the middle of the table with plates, cutlery, ketchup and drinks.
+            Remove your burgers to another plate and carefully wipe your pan or griddle clean with kitchen paper.
+            Halve your burger buns and lightly toast them on the griddle or in the pan. Also great with a chopped salad.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="checkout">
+      <div class="checkout__grid">
+        <div class="checkout__row">
+          <h4>Want some moving stuff</h4>
+          <h5>Check out our video recipes</h5>
+        </div>
+
+        <div class="checkout__row">
+
+          <section class="menu">
+            <div class="image1"><img src="img/vid1.png" alt=""></div>
+            <div class="menu__content">
+              <div class="menu__heading1">September</div>
+              <div class="menu1">Lax sushi rolls</div>
+              <div class="readmore1">Read more</div>
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <div class="checkout__row">
+
+        <section class="menu">
+          <div class="image2"><img src="img/vid2.png" alt=""></div>
+          <div class="menu__content">
+            <div class="menu__heading2">August</div>
+              <div class="menu2">Blossoming cookie</div>
+              <div class="readmore2">Read more</div>
               </div>
             </section>
+          </div>
 
-            <section class="recipe">
-              <div class="recipe__grid">
-                <div class="recipe__content">
-                  <h3 class="recipe__title">Ingredients</h3>
-                  <div class="recipe__dough">For the dough</div>
-                  <div class="recipe__dough__list">
-                    <p>tbs of water</p>
-                    <p>cups of flour</p>
-                    <p>eggs</p>
-                    <p>cup of sugar</p>
-                  </div>
-                  <div class="recipe__filling">For the filling</div>
-                  <div class="recipe__filling__list">
-                    <p>tbs of water</p>
-                    <p>cups of flour</p>
-                    <p>eggs</p>
-                    <p>cup of sugar</p>
-                  </div>
-                  <h3 class="recipe__method">The method</h3>
-                  <div class="recipe__method__text">
-
-                    <p>Wrap the crackers in a tea towel and smash up until fine, breaking up any big bits with your hands, and put them into a large bowl.
-                      Finely chop the parsley, including the stalks. Add the parsley, mustard, if using, and minced beef to the bowl. Crack in the egg and add a good pinch of salt and pepper.
-                      With clean hands, scrunch and mix everything up well. Divide into 6 and pat and mould each piece into a roundish shape about 2cm thick. Drizzle the burgers with oil, put on a plate, cover and place in the fridge until needed (this helps them to firm up).
-
-                      Preheat a large griddle or frying pan for about 4 minutes on a high heat. Turn the heat down to medium.
-                      Place the burgers on the griddle or in the pan and use a spatula to lightly press down on them, making sure the burger is in full contact. Cook them to your liking for 3 or 4 minutes on each side – you may need to cook them in two batches.
-
-                      Wash and dry a few small lettuce leaves, tearing up the larger ones. Slice the tomatoes. Peel and finely slice the red onion. Slice the gherkins lengthways as finely as you can. Place all this on a platter and put in the middle of the table with plates, cutlery, ketchup and drinks.
-                      Remove your burgers to another plate and carefully wipe your pan or griddle clean with kitchen paper.
-                      Halve your burger buns and lightly toast them on the griddle or in the pan. Also great with a chopped salad.</p>
-                  </div>
-
-
-                </div>
+          <section class="menu">
+            <div class="image3"><img src="img/vid3.png" alt=""></div>
+            <div class="menu__content">
+              <div class="menu__heading3">August</div>
+              <div class="menu3">Questches pie</div>
+              <div class="readmore3">Read more</div>
+              <div class="seemore">See more</div>
+            </div>
+          </section>
+          <section class="sub">
+            <div class="sub__grid">
+              <div class= "sub__content"></div>
+                <div class="cravin__more">Craving more?</div>
+                <h6 class="sub__h6">Subscribe to our newsletter</h6>
+                <div class="sub__email">Email</div>
+                <div class="emailexp">email@example.com</div>
+                <div class="line"><img src="img/Rectangle 5.png" alt=""></div>
+                <div class="box"><img src="img/Rectangle.png" alt=""></div>
+                <div class="subnow">Subscribe now</div>
               </div>
-            </section>
+            </div>
+          </section>
 
-            <section class="video_checkout">
-              <div class="checkout_grid">
-                <div class="checkout_row">
-                  <div class="">Want some moving stuff</div>
-                  <h4 class="video_h5">Check out our video recipes</h4>
-                  <div class="video_img"><img src="" alt=""></div>
-                  <div class="checkout_header">September</div>
-                  <h5 class="video_h4">Lax sushi rolls</h5>
-                  <div class="checkout_buttons">
-                    <button class="checkout_button_gold">Read more</button>
-                </div>
-                </div>
-              </div>
-              <div class="checkout_grid">
-                <div class="checkout_row">
-                  <div class="video_img"><img src="" alt=""></div>
-                  <div class="checkout_header">August</div>
-                  <h5 class="video_h5">Blossoming cookie</h5>
-                  <div class="checkout_buttons">
-                    <button class="checkout_button_gold">Read more</button>
-                </div>
-                </div>
-              </div>
-              <div class="checkout_grid">
-                <div class="checkout_row">
-                  <div class="video_img"><img src="" alt=""></div>
-                  <div class="checkout_header">August</div>
-                  <h5 class="video_h5">Questches pie</h5>
-                  <div class="checkout_buttons">
-                    <button class="checkout_button_gold">Read more</button>
-                </div>
-                </div>
-              </div>
-              <div class="checkout_buttons">
-                <button class="checkout_button_gold">See more</button>
-            </section>
-
-            <section class="craving_grid">
-              <div class="craving_grid">
-                <div class="cravin_more">Craving more?</div>
-                <h6 class="video_h6">Subscribe to our newsletter</h6>
-                <div class="craving_email">Email
-                  <input type="email">
-                </div>
-                </div>
-              </div>
-            </section>
-            <section class="videp_socials">
-              <div class="socials_grid">
-                <div class="social_header">Come and join us for more recipes</div>
-                <a href="#" class="fa fa_facebook"></a>
-                <a href="#" class="fa fa_twitter"></a>
-                <a href="#" class="fa fa_youtube"></a>
-              </div>
-            </section>
-
-
-          </main>
-        </body>
-      </html>
+      <section class="vid__socials">
+       <div class="socials__grid">
+         <div class="social__header">Come and join us for more recipes</div>
+         <div class="face">
+           <div class="facebook"><img src="img/Fill 1.png" alt=""></div>
+         </div>
+         <div class="bird">
+           <div class="twitter"><img src="img/Page 1.png" alt=""></div>
+         </div>
+         <div class="yout">
+           <div class="youtube"><img src="img/Path.png" alt=""></div>
+         </div>
+         <div class="www">yamyam.com</div>
+       </div>
+     </section>
+   </main>
+ </body>
+</html>
 
 
 
