--- a/recipe.html
+++ b/recipe.html
@@ -43,9 +43,21 @@
             <div class="flexari">         
                 <div class="box1">
                     <div class="Ingredients-grid">
-                        <h3 class="hero__title">Ingredients</h3>
-                        <h4 class="hero__title">For the dough</h4>
-                        <h4 class="hero__title">For the filling</h4>
+                        <h3 class="method-title">Ingredients</h3>
+                        <h4 class="Ingredients-title">For the dough</h4>
+                        <div class="Ingredients-text">
+                            <p>1  tbs of water</p>
+                            <p>2  cups of flour</p>
+                            <p>2  eggs</p>
+                            <p>2  cup of sugar</p>
+                        </div>
+                        <h4 class="Ingredients-title">For the filling</h4>
+                        <div class="Ingredients-text">
+                            <p>1  tbs of water</p>
+                            <p>2  cups of flour</p>
+                            <p>2  eggs</p>
+                            <p>1  cup of sugar</p>
+                        </div>
                     </div>
                 </div>
                 <div class="box2">
@@ -54,25 +66,25 @@
                         <div class="method-text">
                             <p>
                                 Wrap the crackers in a tea towel and smash up until fine, breaking up any big bits with your
-                                hands, and put them into a large bowl.
+                                hands, and put them into a large bowl.<br>
                                 Finely chop the parsley, including the stalks. Add the parsley, mustard, if using, and minced beef 
-                                to the bowl. Crack in the egg and add a good pinch of salt and pepper.
-                                With clean hands, scrunch and mix everything up well. Divide into 6 and pat and mould each 
-                                piece into a roundish shape about 2cm thick. Drizzle the burgers with oil, put on a plate, cover 
-                                and place in the fridge until needed (this helps them to firm up).
-                    
-                                Preheat a large griddle or frying pan for about 4 minutes on a high heat. Turn the heat down to 
-                                medium.
-                                Place the burgers on the griddle or in the pan and use a spatula to lightly press down on them, 
-                                making sure the burger is in full contact. Cook them to your liking for 3 or 4 minutes on each 
-                                side – you may need to cook them in two batches.
-                    
-                                Wash and dry a few small lettuce leaves, tearing up the larger ones. Slice the tomatoes. Peel 
+                                to the bowl. Crack in the egg and add a good pinch of salt and pepper.<br>
+                                With clean hands, scrunch and mix everything up well. Divide into 6 and pat and mould each
+                                piece into a roundish shape about 2cm thick. Drizzle the burgers with oil, put on a plate, cover
+                                and place in the fridge until needed (this helps them to firm up).<br>
+                                <br>
+                                Preheat a large griddle or frying pan for about 4 minutes on a high heat. Turn the heat down tomatoes
+                                medium.<br>
+                                Place the burgers on the griddle or in the pan and use a spatula to lightly press down on them,
+                                making sure the burger is in full contact. Cook them to your liking for 3 or 4 minutes on each
+                                side – you may need to cook them in two batches.<br>
+                                <br>
+                                Wash and dry a few small lettuce leaves, tearing up the larger ones. Slice the tomatoes. Peel
                                 and finely slice the red onion. Slice the gherkins lengthways as finely as you can. Place all this 
-                                on a platter and put in the middle of the table with plates, cutlery, ketchup and drinks.
-                                Remove your burgers to another plate and carefully wipe your pan or griddle clean with kitchen 
-                                paper.
-                                Halve your burger buns and lightly toast them on the griddle or in the pan. Also great with a 
+                                on a platter and put in the middle of the table with plates, cutlery, ketchup and drinks.<br>
+                                Remove your burgers to another plate and carefully wipe your pan or griddle clean with kitchen
+                                paper.<br>
+                                Halve your burger buns and lightly toast them on the griddle or in the pan. Also great with a
                                 chopped salad.
                             </p>
                         </div>
@@ -83,24 +95,40 @@
             <h2 class="hero__title">Check out our latest recipes</h2>
         </main>
         <footer>
-            <section class="craving_grid">
-                <div class="craving_grid">
-                  <div class="cravin_more">Craving more?</div>
-                  <h6 class="video_h6">Subscribe to our newsletter</h6>
-                  <div class="craving_email">Email
-                    <input type="email">
-                  </div>
-                  </div>
+            <section class="botn">
+                <section class="craving_grid">
+                    <div class="craving_grid">         
+                        <div class="flexin">
+                            <div class="subgroup">
+                                <div class="cravin_kicker">Craving more?</div>
+                                <h6 class="subscribe">Subscribe to our newsletter</h6>
+                            </div>
+                            <div class="emailgroup">
+                                <div class="craving_email">Email</div>
+                                <input type="email">
+                            </div>
+                            <div class="subbutton">
+                                <button>Subscribe</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </section>
+            <section class="vidsocials">
+                <div class="socialsgrid">
+                  <div class="social__header">Come and join us for more recipes</div>
+                  <div class="face">
+                  <div class="facebook"><img src="img/Fill 1.png" alt=""></div>
                 </div>
-              </section>
-              <section class="videp_socials">
-                <div class="socials_grid">
-                  <div class="social_header">Come and join us for more recipes</div>
-                  <a href="#" class="fa fa_facebook"></a>
-                  <a href="#" class="fa fa_twitter"></a>
-                  <a href="#" class="fa fa_youtube"></a>
+                <div class="bird">
+                  <div class="twitter"><img src="img/Page 1.png" alt=""></div>
                 </div>
-              </section>
+                <div class="yout">
+                  <div class="youtube"><img src="img/Path.png" alt=""></div>
+                </div>
+                <div class="www">yamyam.com</div>
+                </div>
+            </section>
         </footer>
     </body>
 
