--- a/latest.html
+++ b/latest.html
@@ -23,16 +23,27 @@
     </header>
 
     <main>
-
       <section class="books">
         <div class="grid">
 
           <div class="row">
-            <div class="col col-12 col-md-10 offset-col-md-1 offset-col-sm-1">
-              <div class="hero__kicker">Get ready to get busy</div>
-              <h1>All Recipes</h1>
-            </div>
+
+            <div class="col col-12 col-md- col-sm-10 offset-col-md-1 offset-col-sm-1">
+
+      <section class="topline">
+          <div class="hero__kicker">Get ready to get busy</div>
+            <h1>All Recipes</h1>
+          <div class="righttext2">
+              <input type="checkbox"></input>
+              <p class="labeltext">Only show video recipes</p>
           </div>
+      </section>
+      </div>
+      </div>
+      </div>
+
+      <section class="books">
+        <div class="grid">
 
           <div class="row">
 
@@ -43,9 +54,9 @@
                   <div class="heading">
                     <h4>Spetember</h4>
                     <h3>Pumpkin pie</h3>
-                  </div>
-                  <div class="buy">
-                    <span class="price">Read more.</span>
+                      <div class="buy">
+                        <span class="price">Read more.</span>
+                      </div>
                   </div>
                 </div>
               </section>
@@ -58,9 +69,9 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Milk cookies</h3>
-                  </div>
-                  <div class="buy">
-                    <span class="price">Read more</span>
+                      <div class="buy">
+                        <span class="price">Read more</span>
+                      </div>
                   </div>
                 </div>
               </section>
@@ -73,10 +84,9 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Almond cookies</h3>
-
-                  </div>
-                  <div class="buy">
-                    <span class="price">Read more</span>
+                      <div class="buy">
+                        <span class="price">Read more</span>
+                      </div>
                   </div>
                 </div>
               </section>
@@ -92,10 +102,10 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Banana cake</h3>
-                  </div>
-                  <div class="buy">
-                    <span class="price">Read more</span>
-                  </div>
+                      <div class="buy">
+                        <span class="price">Read more</span>
+                      </div>
+                    </div>
                 </div>
               </section>
             </div>
@@ -107,11 +117,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Lax salad</h3>
+                      <div class="buy">
+                        <span class="price">Read more</span>
+                      </div>
                   </div>
-                  <div class="buy">
-                    <span class="price">Read more</span>
-                  </div>
-                </div>
+              </div>
               </section>
             </div>
 
@@ -122,12 +132,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Cube cake</h3>
-
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
           </div>
@@ -141,11 +150,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Pumpkin pie</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
 
@@ -156,11 +165,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Milk cookies</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
 
@@ -171,11 +180,10 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Almond cookies</h3>
-
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </section>
             </div>
@@ -190,11 +198,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Banana cake</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
 
@@ -205,11 +213,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Lax salad</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
 
@@ -220,12 +228,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Cube cake</h3>
-
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
           </div>
@@ -239,11 +246,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Pumpkin pie</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
 
@@ -254,10 +261,10 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Milk cookies</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </section>
             </div>
@@ -269,12 +276,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Almond cookies</h3>
-
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
           </div>
@@ -288,10 +294,10 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Banana cake</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </section>
             </div>
@@ -303,10 +309,10 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Lax salad</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </section>
             </div>
@@ -318,11 +324,10 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Cube cake</h3>
-
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </section>
             </div>
@@ -337,11 +342,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Pumpkin pie</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
 
@@ -352,11 +357,11 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Milk cookies</h3>
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </section>
             </div>
 
@@ -367,24 +372,91 @@
                   <div class="heading">
                     <h4>September</h4>
                     <h3>Almond cookies</h3>
-
-                  </div>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </section>
             </div>
           </div>
 
         </div>
-      </section>
-
-      <section class="seemore">
-        <div class="takki" class="collapsible">See more</div>
-
 
       </section>
+      <section class="books">
+          <div class="grid">
+
+            <div class="row">
+
+              <div class="col col-12 col-md-5 col-sm-10 offset-col-md-1 offset-col-sm-1">
+                <div class="seemore">
+                  <div class="boxtext">See more</div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
+
+      <section class="books">
+        <div class="grid">
+
+          <div class="row">
+            <div class="subsection">
+            <div class="col col-6 col-md-5 col-sm-10 offset-col-md-1 offset-col-sm-1">
+
+
+              <section class="Subscribe">
+                <div class="Subgroup">
+                  <div class="crave">Craving more?</div>
+                  <div class="sub">Subscribe to our newsletter</div>
+                </div>
+              </div>
+              <div class="col col-6 col-md-5 col-sm-10 offset-col-md-1 offset-col-sm-1">
+                <fieldset>
+                  <div class="email1">
+                    <label for="email">Email</label>
+                      <div>
+                        <input type="emailad" name="emailad" id="emailad" placeholder="Enter your mail here">
+                      </div>
+                  </div>
+                  <div class="email2">
+                    <label for="email">Email</label>
+                      <div>
+                        <input type="emailad2" name="emailad2" id="emailad2" placeholder="email@example.com">
+                      </div>
+                  </div>
+                  <div class="buttonflex">
+                    <button>Subscribe now</button>
+                  </div>
+                </fieldset>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      </section>
+
+      <div class="grid">
+
+        <div class="row">
+
+          <div class="col col-12 col-md- col-sm-10 offset-col-md-1 offset-col-sm-1">
+      <div class="joinus">Come and join us for more recipes</div>
+            <section class="socials">
+
+                      <a href="#" class="fa fa-facebook"></a>
+                      <a href="#" class="fa fa-twitter"></a>
+                      <a href="#" class="fa fa-youtube"></a>
+              </section>
+      <div class="compurl">yamyam.com</div>
+      </div>
+      </div>
+      </div>
+
+
 
     </main>
   </body>
