--- a/latest.html
+++ b/latest.html
@@ -29,9 +29,9 @@
           <div class="row">
 
             <div class="col col-12 col-md- col-sm-10 offset-col-md-1 offset-col-sm-1">
-
+<div class="hero__kicker">Get ready to get busy</div>
       <section class="topline">
-          <div class="hero__kicker">Get ready to get busy</div>
+
             <h1>All Recipes</h1>
           <div class="righttext2">
               <input type="checkbox"></input>
@@ -53,10 +53,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>Spetember</h4>
+                    <div class="headerandread">
                     <h3>Pumpkin pie</h3>
                       <div class="buy">
                         <span class="price">Read more.</span>
                       </div>
+                    </div>
                   </div>
                 </div>
               </section>
@@ -68,10 +70,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Milk cookies</h3>
                       <div class="buy">
                         <span class="price">Read more</span>
                       </div>
+                    </div>
                   </div>
                 </div>
               </section>
@@ -83,11 +87,13 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Almond cookies</h3>
                       <div class="buy">
                         <span class="price">Read more</span>
                       </div>
                   </div>
+                </div>
                 </div>
               </section>
             </div>
@@ -101,10 +107,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Banana cake</h3>
                       <div class="buy">
                         <span class="price">Read more</span>
                       </div>
+                    </div>
                     </div>
                 </div>
               </section>
@@ -116,11 +124,13 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Lax salad</h3>
                       <div class="buy">
                         <span class="price">Read more</span>
                       </div>
                   </div>
+                </div>
               </div>
               </section>
             </div>
@@ -131,10 +141,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Cube cake</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -149,10 +161,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Pumpkin pie</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -164,10 +178,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Milk cookies</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -179,11 +195,13 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Almond cookies</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
                 </div>
               </section>
             </div>
@@ -197,10 +215,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Banana cake</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -212,10 +232,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Lax salad</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -227,10 +249,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Cube cake</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -245,10 +269,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Pumpkin pie</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -260,11 +286,13 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Milk cookies</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
                 </div>
               </section>
             </div>
@@ -275,11 +303,13 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Almond cookies</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
                 </div>
+              </div>
               </div>
               </section>
             </div>
@@ -293,10 +323,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Banana cake</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
                 </div>
               </section>
@@ -308,10 +340,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Lax salad</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
                 </div>
               </section>
@@ -323,10 +357,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Cube cake</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
                 </div>
               </section>
@@ -341,10 +377,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Pumpkin pie</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -356,10 +394,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Milk cookies</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
               </div>
               </section>
@@ -371,10 +411,12 @@
                 <div class="content">
                   <div class="heading">
                     <h4>September</h4>
+                    <div class="headerandread">
                     <h3>Almond cookies</h3>
                   <div class="buy">
                     <span class="price">Read more</span>
                   </div>
+                </div>
                 </div>
                 </div>
               </section>
@@ -390,8 +432,14 @@
             <div class="row">
 
               <div class="col col-12 col-md-5 col-sm-10 offset-col-md-1 offset-col-sm-1">
+                <div class="borders">
+                  <hr class="leftborder">
+
+
                 <div class="seemore">
                   <div class="boxtext">See more</div>
+                </div>
+                <hr class="rightborder">
                 </div>
               </div>
             </div>
@@ -414,6 +462,7 @@
               </div>
               <div class="col col-6 col-md-5 col-sm-10 offset-col-md-1 offset-col-sm-1">
                 <fieldset>
+                  <div class="emails">
                   <div class="email1">
                     <label for="email">Email</label>
                       <div>
@@ -426,6 +475,7 @@
                         <input type="emailad2" name="emailad2" id="emailad2" placeholder="email@example.com">
                       </div>
                   </div>
+                </div>
                   <div class="buttonflex">
                     <button>Subscribe now</button>
                   </div>
